@@ -26,7 +26,7 @@ import dk.dtu.compute.se.pisd.roborally.utils.CompareException;
 import dk.dtu.compute.se.pisd.roborally.utils.FieldsCompare;
 
 import org.jetbrains.annotations.NotNull;
-import java.util.Arrays;
+import java.util.List;
 
 import static dk.dtu.compute.se.pisd.roborally.model.Heading.SOUTH;
 
@@ -198,13 +198,11 @@ public class Player extends Subject {
 
     @Override
     public boolean equals(Object obj) { // TODO: This should be made as the board, where all variables are checked
-        if (obj instanceof Player) {
-            Player comp = ((Player)obj);
-
+        if (obj instanceof Player comp) {
             try {
                 FieldsCompare<Player> fc = new FieldsCompare<Player>();
-                // Dont test player for an equal board, since the player can be identical but on another board.
-                fc.CompareFields(this, comp, Arrays.asList(new String[] {"board"}));
+                // Don't test player for an equal board, since the player can be identical but on another board.
+                fc.CompareFields(this, comp, List.of("board"));
                 return true;
             } catch (CompareException e) {
                 return false;
